--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "Boilerplate of Hux Blog"
+description: "After all. So what?"
 ---
 
 {% for post in paginator.posts %}
