upadate the blog v1.2

--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "About"
-description: "Hey, this is Joseph (Vitae)."
+description: "Hey, this is Vitae (Joseph)."
 header-img: "img/about-bg.jpg"
 ---
 
