--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "After all. So what?"
+description: "If other means fail, we shall resort to great EFFORT."
 ---
 
 {% for post in paginator.posts %}
